syntax = "proto3";

package supabase_l2_blockchain.core.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "core/tx.proto";

message BlockHeader {
    string chain_id = 1;
    uint64 height = 2;
    google.protobuf.Timestamp time = 3;
    bytes last_block_hash = 4;
    bytes txs_merkle_root = 5;
}

message TxSeries {
    repeated Txs txs = 1;
}

message TxParallel {
    repeated Txs txs = 2;
}

message Txs {
    oneof strategy {
        supabase_l2_blockchain.core.v1.Tx tx = 1;
        TxSeries series = 2;
        TxParallel parallel = 3;
    }
}

message BlockBody {
    Txs txs = 1;
    repeated google.protobuf.Any next_signers = 2;
    repeated bytes signatures = 3;
}

message Block {
    BlockHeader header = 1;
    BlockBody body = 2;
}
